<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <EditText
        android:id="@+id/login_phonenumber"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textCursorDrawable="@null"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:inputType="phone"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:textColor="#777777"
        android:layout_gravity="center_vertical"
        android:textColorHint="#ffdddddd"
        android:textSize="20sp"
        android:background="@drawable/login_top"
        android:singleLine="true"
        android:hint="@string/phone_number"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textCursorDrawable="@null"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:textColor="#777777"
        android:layout_gravity="center_vertical"
        android:textColorHint="#ffdddddd"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:background="@drawable/login_bottom"
        android:singleLine="true"
        android:hint="@string/password"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_height="3dp"
        >
        <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
            android:id="@+id/login_progressbar"
            android:layout_width="100dp"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"/>

    </RelativeLayout>
    <com.okm_android.main.View.Button.BootstrapButton
        android:id="@+id/login_button"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:clickable="true"
        android:layout_margin="20dp"
        android:text="@string/login"
        bootstrapbutton:bb_roundedCorners="true"
        bootstrapbutton:bb_text_gravity="center"
        bootstrapbutton:bb_type="info"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/quick_login"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:textColor="#777777"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        >
        <RelativeLayout
            android:id="@+id/fragment_login_sinalayout"
            android:background="@drawable/quick_login_left_style"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:gravity="center"
                android:drawablePadding="3dp"
                android:drawableLeft="@drawable/weibo"
                android:text="@string/sina"
                android:layout_centerInParent="true"
                android:textColor="#777777"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/fragment_login_weichatlayout"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:background="@drawable/quick_login_right_style"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:gravity="center"
                android:drawablePadding="3dp"
                android:drawableLeft="@drawable/wechat"
                android:text="@string/weixin"
                android:layout_centerInParent="true"
                android:textColor="#777777"
                />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
            android:layout_centerHorizontal="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:textSize="18sp"
                android:text="@string/visitor"
                android:textColor="@drawable/text_press_style"
                />
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="8dp"
                android:background="#ffdddddd"
                />
            <TextView
                android:layout_width="wrap_content"
                android:clickable="true"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginLeft="8dp"
                android:text="@string/forgetpassword"
                android:textColor="@drawable/text_press_style"
                />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
