<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/login_top"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="60dp"
        >
        <EditText
            android:id="@+id/register_phonenumber"
            android:textCursorDrawable="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:gravity="center_vertical"
            android:textColor="#777777"
            android:layout_gravity="center_vertical"
            android:textColorHint="#ffdddddd"
            android:textSize="20sp"
            android:paddingRight="30dp"
            android:background="@null"
            android:singleLine="true"
            android:hint="@string/phone_number"/>

        <TextView
            android:id="@+id/get_verification_code"
            android:layout_width="wrap_content"
            android:clickable="true"
            android:layout_alignParentRight="true"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:layout_marginRight="5dp"
            android:text="@string/get_verification_code"
            android:textColor="@drawable/text_press_style"
            />
    </RelativeLayout>

    <EditText
        android:id="@+id/register_verification_code"
        android:textCursorDrawable="@null"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="phone"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:textColor="#777777"
        android:layout_gravity="center_vertical"
        android:textColorHint="#ffdddddd"
        android:textSize="20sp"
        android:background="@drawable/login_center"
        android:singleLine="true"
        android:hint="@string/verification_code"/>

    <EditText
        android:id="@+id/register_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textCursorDrawable="@null"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:textColor="#777777"
        android:layout_gravity="center_vertical"
        android:textColorHint="#ffdddddd"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:background="@drawable/login_bottom"
        android:singleLine="true"
        android:hint="@string/password"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_height="3dp"
        >
        <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
            android:id="@+id/register_progressbar"
            android:layout_width="100dp"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"/>

    </RelativeLayout>
    <com.okm_android.main.View.Button.BootstrapButton
        android:id="@+id/register_button"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:clickable="true"
        android:layout_margin="20dp"
        android:text="@string/register"
        bootstrapbutton:bb_roundedCorners="true"
        bootstrapbutton:bb_text_gravity="center"
        bootstrapbutton:bb_type="info"/>
</LinearLayout>
