<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="226dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:background="#ffffff"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="44.5dp" >

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="21.5dp"
                            android:text="@string/message_send"
                            android:textColor="#343434"
                            android:textSize="15.75sp" />

                        <com.okm_android.main.View.Button.UISwitchButton
                            xmlns:switch="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/setting_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            switch:bmHeight="20.5dp"
                            switch:bmWidth="34dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="23dp"
                            android:gravity="end|center_vertical" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="21.5dp"
                        android:background="#e6e6e6" >
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/setting_clean_cache"
                        android:layout_width="match_parent"
                        android:layout_height="44.5dp"
                        android:clickable="true"
                        android:background="@drawable/selector">

                        <TextView
                            android:id="@+id/show_food_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="21.5dp"
                            android:text="@string/clean_cache"
                            android:textColor="#343434"
                            android:textSize="15.75sp" />

                        <TextView
                            android:id="@+id/show_cache"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/show_food_price"
                            android:layout_alignParentRight="true"
                            android:text="显示缓存"
                            android:layout_marginRight="21.5dp"
                            android:textSize="15.75sp"
                            android:textColor="#343434" />

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="34dp"
                    android:background="#ffffff"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:id="@+id/setting_app_advise"
                        android:layout_width="match_parent"
                        android:layout_height="44.5dp"
                        android:clickable="true"
                        android:background="@drawable/selector" >

                        <TextView
                            android:id="@+id/advise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="21.5dp"
                            android:gravity="left|center_vertical"
                            android:text="@string/app_advice"
                            android:textColor="#343434"
                            android:textSize="15.75sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="21.5dp"
                        android:background="#e6e6e6" >
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/setting_app_mark"
                        android:layout_width="match_parent"
                        android:layout_height="44.5dp"
                        android:background="@drawable/selector"
                        android:clickable="true" >

                        <TextView
                            android:id="@+id/mark"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="21.5dp"
                            android:gravity="left|center_vertical"
                            android:text="@string/app_mark"
                            android:textColor="#343434"
                            android:textSize="15.75sp" />

                    </RelativeLayout>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="44.5dp"
                    android:layout_marginTop="34dp"
                    android:background="#ffffff">
                    <RelativeLayout
                        android:id="@+id/setting_update"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/selector"
                        android:clickable="true" >

                        <TextView
                            android:id="@+id/update_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="21.5dp"
                            android:gravity="left|center_vertical"
                            android:text="@string/update"
                            android:textColor="#343434"
                            android:textSize="15.75sp" />

                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="226dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true" >

                <TextView
                    android:id="@+id/shop_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="32dp"
                    android:text="@string/version"
                    android:textColor="#343434"
                    android:textSize="15.75sp"
                    android:layout_alignRight="@+id/imageView"
                    android:layout_alignEnd="@+id/imageView"
                    android:layout_alignLeft="@+id/imageView"
                    android:layout_alignStart="@+id/imageView"
                    android:gravity="center"/>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="112.5dp"
                    android:layout_height="112.5dp"
                    android:layout_above="@+id/shop_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="15dp"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/lingjiaxiaochu" />

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>