<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/food_menu_listView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="45dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#434343"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/counts"
            android:textColor="#FFFFFF"
            android:textSize="15.75sp"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:id="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="0"
            android:textColor="#FFFFFF"
            android:textSize="15.75sp"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView2"
            android:id="@+id/show_food_count"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/total_prices"
            android:textColor="#FFFFFF"
            android:textSize="15.75sp"
            android:gravity="center"
            android:id="@+id/shop_name"
            android:layout_marginLeft="44dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/show_food_count" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="￥"
            android:textColor="#FFFFFF"
            android:textSize="15.75sp"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/shop_name"
            android:id="@+id/textView4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="0"
            android:textColor="#FFFFFF"
            android:textSize="15.75sp"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView4"
            android:id="@+id/show_food_price" />

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="34dp"
            android:id="@+id/place_order"
            android:clickable="true"
            android:layout_marginRight="6dp"
            android:background="@drawable/bbuton_place_order_style"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/place_order"
                android:textColor="#ffffff"
                android:textSize="15.75dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
